--- a/index.html
+++ b/index.html
@@ -2,47 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ accordion</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <title>FAQ accordion</title>
 </head>
 <body>
-
-  FAQs
-
-  What is Frontend Mentor, and how will it help me?
-
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
-
-  Is Frontend Mentor free?
-
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
-
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
-
-  
-  <div class="attribution">
+  <main class="container">
+    <section class="background-img">
+      <img id="desktop-img" src="assets/images/background-pattern-desktop.svg" alt="desktop background image">
+      <img id="mobile-img" src="assets/images/background-pattern-mobile.svg" alt="mobile background image">
+    </section>
+    <section class="page-info-card">
+      <div class="header">
+        <img id="star" src="assets/images/icon-star.svg" alt="star icon"><h1 id="FAQs">FAQs</h1>
+      </div>
+      <div class="QAs">
+        <div class="QA">
+          <p class="question">What is Frontend Mentor, and how will it help me?</p><button><img src="assets/images/icon-plus.svg" alt="plus icon"></button>
+          <p class="answer">
+            Frontend Mentor offers realistic coding challenges to help developers improve their 
+            frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
+            all levels and ideal for portfolio building.
+          </p>
+        </div>
+        <div class="QA">
+          <p class="question">Is Frontend Mentor free?</p><button><img src="assets/images/icon-plus.svg" alt="plus icon"></button>
+          <p class="answer">
+            Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+            option providing access to a range of projects suitable for all skill levels.
+          </p>
+        </div>
+        <div class="QA">
+          <p class="question">Can I use Frontend Mentor projects in my portfolio?</p><button><img src="assets/images/icon-plus.svg" alt="plus icon"></button>
+          <p class="answer">
+            Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+            way to showcase your skills to potential employers!
+          </p>
+        </div>
+        <div class="QA">
+          <p class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</p><button><img src="assets/images/icon-plus.svg" alt="plus icon"></button>
+          <p class="answer">
+            The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+            channel where you can ask questions and seek support from other community members.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://www.frontendmentor.io/profile/alphastand27" target="_blank">Micheal</a>.
+  </footer>
+  <script src="index.js"></script>
 </body>
 </html>
