--- a/index.html
+++ b/index.html
@@ -16,34 +16,46 @@
     </section>
     <section class="page-info-card">
       <div class="header">
-        <img id="star" src="assets/images/icon-star.svg" alt="star icon"><h1 id="FAQs">FAQs</h1>
+        <img id="star" src="assets/images/icon-star.svg" alt="star icon"><h1 id="faqs">FAQs</h1>
       </div>
-      <div class="QAs">
-        <div class="QA">
-          <p class="question">What is Frontend Mentor, and how will it help me?</p><button><img src="assets/images/icon-plus.svg" alt="plus icon"></button>
+      <div class="qas">
+        <div class="qa">
+          <div class="qb">
+            <p class="question">What is Frontend Mentor, and how will it help me?</p>
+            <img class="action-icon" src="assets/images/icon-plus.svg" alt="plus icon">
+          </div>
           <p class="answer">
             Frontend Mentor offers realistic coding challenges to help developers improve their 
             frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
             all levels and ideal for portfolio building.
           </p>
         </div>
-        <div class="QA">
-          <p class="question">Is Frontend Mentor free?</p><button><img src="assets/images/icon-plus.svg" alt="plus icon"></button>
+        <div class="qa">
+          <div class="qb">
+            <p class="question">Is Frontend Mentor free?</p>
+            <img class="action-icon" src="assets/images/icon-plus.svg" alt="plus icon">
+          </div>
           <p class="answer">
             Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
             option providing access to a range of projects suitable for all skill levels.
           </p>
         </div>
-        <div class="QA">
-          <p class="question">Can I use Frontend Mentor projects in my portfolio?</p><button><img src="assets/images/icon-plus.svg" alt="plus icon"></button>
+        <div class="qa">
+          <div class="qb">
+            <p class="question">Can I use Frontend Mentor projects in my portfolio?</p>
+            <img class="action-icon" src="assets/images/icon-plus.svg" alt="plus icon">
+          </div>
           <p class="answer">
             Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
             way to showcase your skills to potential employers!
           </p>
         </div>
-        <div class="QA">
-          <p class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</p><button><img src="assets/images/icon-plus.svg" alt="plus icon"></button>
-          <p class="answer">
+        <div class="qa" id="qa-four">
+          <div class="qb">
+            <p class="question">How can I get help if I'm stuck on a challenge?</p>
+            <img class="action-icon" src="assets/images/icon-plus.svg" alt="plus icon">
+          </div>
+          <p class="answer" id="a-four">
             The best place to get help is inside Frontend Mentor's Discord community. There's a help 
             channel where you can ask questions and seek support from other community members.
           </p>
